{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 14,
  "lineage": "218e074c-7667-a5a0-5672-44e14226f4ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "depi_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:633690268969:instance/i-05dff45400acedaa2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05dff45400acedaa2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ec22498e948ff8e6"
              }
            ],
            "primary_network_interface_id": "eni-0ec22498e948ff8e6",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "public_ip": "54.210.30.59",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e8c7800702124cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db401e79c55d70ac",
            "tags": {
              "Name": "DEPI-EC2"
            },
            "tags_all": {
              "Name": "DEPI-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b31427f4072759c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "633690268969",
            "id": "i-05dff45400acedaa2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.depi_key",
            "aws_security_group.sg",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633690268969:internet-gateway/igw-0e3ca00cf41fff551",
            "id": "igw-0e3ca00cf41fff551",
            "owner_id": "633690268969",
            "region": "us-east-1",
            "tags": {
              "Name": "DEPI-IGW"
            },
            "tags_all": {
              "Name": "DEPI-IGW"
            },
            "vpc_id": "vpc-0d9f9ee47e3b85017"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633690268969:route-table/rtb-0bafab149a8274986",
            "id": "rtb-0bafab149a8274986",
            "owner_id": "633690268969",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3ca00cf41fff551",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEPI-RT"
            },
            "tags_all": {
              "Name": "DEPI-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9f9ee47e3b85017"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "633690268969",
            "id": "rtb-0bafab149a8274986",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca9772d9695e439",
            "region": "us-east-1",
            "route_table_id": "rtb-0bafab149a8274986",
            "subnet_id": "subnet-0db401e79c55d70ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633690268969:security-group/sg-04b31427f4072759c",
            "description": "Allow SSH + HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b31427f4072759c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "depi-sg",
            "name_prefix": "",
            "owner_id": "633690268969",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEPI-SG"
            },
            "tags_all": {
              "Name": "DEPI-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9f9ee47e3b85017"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "633690268969",
            "id": "sg-04b31427f4072759c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633690268969:subnet/subnet-0db401e79c55d70ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db401e79c55d70ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633690268969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "DEPI-Subnet"
            },
            "tags_all": {
              "Name": "DEPI-Subnet"
            },
            "vpc_id": "vpc-0d9f9ee47e3b85017"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "633690268969",
            "id": "subnet-0db401e79c55d70ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633690268969:vpc/vpc-0d9f9ee47e3b85017",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047e92092e4aaea3a",
            "default_route_table_id": "rtb-09476e089c04734ba",
            "default_security_group_id": "sg-00071984a125930d2",
            "dhcp_options_id": "dopt-022c44b2756ea2096",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9f9ee47e3b85017",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09476e089c04734ba",
            "owner_id": "633690268969",
            "region": "us-east-1",
            "tags": {
              "Name": "DEPI-VPC"
            },
            "tags_all": {
              "Name": "DEPI-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "633690268969",
            "id": "vpc-0d9f9ee47e3b85017",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}